# Aardvark.jl

./: LICENSE  Project.toml  README.md  build_cxx_dependencies.sh  default.nix
lib/ot/: CMakeLists.txt  EMD_wrapper.cpp
src/: Aardvark.jl
